--- a/WeatherApp/package.json
+++ b/WeatherApp/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.67.2"
+    "react-native": "0.67.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-neu-element": "^1.1.9",
+    "react-native-reanimated": "^2.3.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
